--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 PORT=8080
+
+MONGO_CONNECTION=mongodb+srv://user_node_coffee:LrIlyEaa3U2uQPyA@myclusercoffee.1jfuq.mongodb.net/coffeeDB
+
+USER=user_node_coffee
+PASS=LrIlyEaa3U2uQPyA
